syntax = "proto3";

option csharp_namespace = "InventoryService.Proto";

package InventoryService;

import "google/protobuf/timestamp.proto";


service Inventory {
  rpc CheckInventory(InventoryCheckRequest) returns (InventoryCheckResponse);

}

message InventoryCheckRequest {
	  int32 orderId = 1;
}


message InventoryCheckResponse {

}